--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "cypress": "^13.6.2",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
